// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for clevertap destination: userUpload action - all fields 1`] = `
Object {
  "d": Array [
    Object {
      "identity": "fv8YT)gSPkb9T7",
      "profileData": Object {
        "testType": "fv8YT)gSPkb9T7",
      },
      "source": "Segment",
      "ts": 1737611202789376,
      "type": "profile",
    },
  ],
}
`;

exports[`Testing snapshot for clevertap destination: userUpload action - required fields 1`] = `
Object {
  "d": Array [
    Object {
      "identity": "fv8YT)gSPkb9T7",
      "source": "Segment",
      "type": "profile",
    },
  ],
}
`;
